# trsync

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  migrate_mos_mirrors_to_snapshoted_shcheme.py  mos_pull.sh  mos_push.py  mos_symlink.py  push_snapshot_to_all_locations.py  push_to_all_locations.py  requirements.txt  rsync_client.py  rsync_remote.py  rsync_url.py  rsync_versioned.py  server_list.py  setup.cfg  setup.py  setup_hooks.py  shell.py  symlink_on_all_locations.py  symlink_target.py  tempfiles.py  test_rsync_url.py  test_rsync_url.yaml  test_utils.py  tox.ini  trsync.py  trsync_push.py  trsync_remove.py  utils.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
trsync/: __init__.py
trsync/cmd/: cli.py  trsync_push.py  trsync_remove.py
trsync/objects/: rsync_mirror.py  rsync_ops.py  rsync_remote.py  rsync_url.py
trsync/tests/: base.py  rsync_base.py  test_rsync_mirror.py  test_rsync_ops.py  test_rsync_remote.py  test_rsync_url.py  test_rsync_url.yaml  test_utils.py
trsync/tests/functional/: rsync_base.py  test_rsync_mirror.py  test_rsync_ops.py  test_rsync_remote.py
trsync/tests/functional/rsync_remotes/: path.py
trsync/tests/rsync_remotes/: rsync2.conf  rsync2.py
trsync/utils/: shell.py  tempfiles.py  utils.py
