[metadata]
name = trsync
version = 0.5
summary = rsync wrapper that implements transactional synchronization with remote location
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    trsync

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = trsync/locale
domain = trsync

[update_catalog]
domain = trsync
output_dir = trsync/locale
input_file = trsync/locale/trsync.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = trsync/locale/trsync.pot

[entry_points]
console_scripts =
    trsync=trsync.cmd.cli:main

trsync =
    push = trsync.cmd.cli:PushCmd
    symlink = trsync.cmd.cli:SymlinkCmd
    remove = trsync.cmd.cli:RemoveCmd

[global]
setup-hooks =
    pbr.hooks.setup_hook
    setup_hooks.setup_hook
